# cogos

./: .dockerignore  .gitignore  .mcp.json  .ruff.toml  AGENTS.md  IMPROVEMENTS.md  README.md  Tiltfile  cogtainers.ci.yml  flake.nix  pyproject.toml  resource-mapping.json  sandbox-requirements.txt
.claude/: settings.json
.claude/commands/: announce.md  asana.do-task.md  dashboard.test.md  deploy.cogos.md  deploy.cogtainer.md  deploy.dashboard.md  deploy.md  done.md  sandbox.local-test.md  sandbox.up.md  submit.gt.md  submit.md  submit:gt.md
.claude/hooks/: session-start.sh
.github/workflows/: auto-approve.yml  cfn-validate.yml  ci.yml  docker-build-dashboard.yml  docker-build-executor.yml  pypi-publish.yml
channels/claude-code/: package.json  server.ts
commands/: cogent.md
dashboard/: AGENTS.md  Dockerfile  entrypoint.sh  ports.sh  start.sh
dashboard/frontend/: .gitignore  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
docs/: agents.md  deploy.md  todos.md
docs/brain/: ecs-tmux-shell-design.md
docs/channels/: design.md  discord-bridge-design.md  impl_plan.md
docs/coglet/: recruiter-migration.md
docs/cogos/: channels.md  design.md  file-store.md  guide.md
docs/cogtainer/: README.md  cli.md
docs/design/: coglet.md  tournament.md
docs/ideas/: ensue-inspired-semantic-memory.md  process-continuity-and-interaction.md
docs/memory/: 2026-03-06-versioned-memory-design.md  versioned-memory-plan.md
docs/mind/: impl_plan.md
docs/plans/: 2026-03-05-ecs-tmux-shell-impl.md  2026-03-08-cogent-os-redesign.md  2026-03-09-cogos-image-impl.md  2026-03-11-capability-scoping-impl.md  2026-03-12-channels-impl.md  2026-03-12-local-executor.md  2026-03-12-p0-capabilities-design.md  2026-03-12-p0-capabilities-plan.md  2026-03-12-recruiter-app-impl.md  2026-03-13-per-channel-discord-handlers.md  2026-03-13-tournament-submission-cogent-design.md  2026-03-14-python-executor-design.md  2026-03-15-discord-full-integration-design.md  2026-03-15-discord-full-integration-plan.md  2026-03-15-init-reboot-design.md  2026-03-15-init-reboot-plan.md  2026-03-15-recruiter-coglets-migration.md  2026-03-16-discord-cog-design.md  2026-03-16-discord-cog-plan.md  2026-03-16-per-process-io-design.md  2026-03-16-per-process-io-plan.md  2026-03-16-web-publishing-design.md  2026-03-17-cogos-five-improvements.md  2026-03-17-discord-reaction-identity-design.md  2026-03-17-worker-cog-design.md  2026-03-18-child-completion-notification-design.md  2026-03-18-discord-history-plan.md  2026-03-18-github-awareness-design.md  2026-03-18-github-awareness-plan.md  2026-03-18-investigator-design.md  2026-03-18-mount-filesystem-design.md  2026-03-18-mount-filesystem-plan.md  2026-03-19-cli-refactor-plan.md  2026-03-19-cogtainer-to-polis-design.md  2026-03-19-cogtainer-to-polis-plan.md  2026-03-19-shared-discord-bridge-design.md  2026-03-19-shared-discord-bridge-plan.md  2026-03-19-shared-rds-design.md  2026-03-19-shared-rds-plan.md  2026-03-19-versioned-boot-design.md  (+9 more)
docs/polis/: cli.md  design.md
docs/tools/: code-mode-design.md
docs/traces/: 2026-03-16-dm-trace-transcript.txt
eggs/ovo/: bootstrap.py
images/cogent-v1/: README.md  versions.defaults.json
images/cogos/: versions.defaults.json
marketplace/: marketplace.json
plugins/cogos/: .mcp.json  package-lock.json  package.json
scripts/: deploy-config  migrate_to_shared_rds.py  shell-prompt.sh
src/brain/: __init__.py  cli.py  update_cli.py
src/channels/: __init__.py  access.py  cli.py
src/cli/: __init__.py  __main__.py  dashboard.py  local_dev.py
src/cogos/: __init__.py  scrimmage.py
src/cogos_api/: __init__.py  app.py  auth.py  config.py  db.py
src/cogtainer/: aws.py  ci_config.py  cli.py  cloudflare.py  cogent_cli.py  cogtainer_cli.py  config.py  deploy_config.py  docker_compose.py  event_router.py  local_dispatcher.py  naming.py  secret_store.py  secrets.py  update_cli.py
src/dashboard/: app.py  auth.py  config.py  database.py  db.py  models.py  schema.sql  ws.py
src/memory/: cli.py  context_engine.py  errors.py  store.py
src/mind/: __init__.py  bootstrap_loader.py  cli.py  loader.py  memory_loader.py  program.py  task_loader.py  tool_loader.py
src/polis/: __init__.py  aws.py  cli.py  cloudflare.py  config.py  naming.py  provisioning.py  runtime_status.py  status.py
src/run/: cli.py
tests/brain/: test_trigger_throttle.py  test_update_cli.py
tests/channels/: test_access.py  test_asana.py  test_discord.py  test_discord_bridge.py  test_discord_chunking.py  test_integration.py
tests/cli/: test_io_cli.py  test_local_dev.py
tests/cogos/: local_validation.md  test_alert_dispatcher.py  test_alert_monitor_e2e.py  test_alert_monitor_integration.py  test_alert_monitor_rules.py  test_capability_scoping_e2e.py  test_cascade_kill.py  test_channel_dispatch.py  test_child_exit_notification.py  test_cli_migrations.py  test_cli_process_load.py  test_cog.py  test_cog_dir.py  test_cog_make_coglet.py  test_cog_runtime.py  test_coglet.py  test_context_engine.py  test_diagnostics_cog.py  test_discord_cog_image.py  test_discord_history.py  test_discord_identity_e2e.py  test_dispatch_channel_name.py  test_executor_channels.py  test_executor_handler.py  test_executor_proxy_replacement.py  test_fibonacci_image.py  test_file_references.py  test_filesystem_lab_image.py  test_image_apply.py  test_image_e2e.py  test_image_snapshot.py  test_image_spec.py  test_llm_client.py  test_local_executor.py  test_local_ingress_queue.py  test_local_repository_prompt_migration.py  test_local_user_flow.py  test_me_capability.py  test_newsfromthefront_image.py  test_notify_parent_on_exit.py  (+17 more)
tests/cogos_api/: test_auth.py  test_capabilities.py  test_sessions.py
tests/cogtainer/: test_ci_config.py  test_cogent_cli.py  test_cogtainer_cli.py  test_cogtainer_update.py  test_config.py  test_dead_letter.py  test_docker_compose.py  test_event_router.py  test_integration_local.py  test_llm_provider.py  test_runtime_aws.py  (+7 more)
todos/: cogtainer-status-canonicalization.md  polis-status-canonicalization.md  secure-capability-proxy-api.md
(+839 files in other folders)
